--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,7 @@
 	font-family: 'Bodoni Moda', serif;
 	font-weight: 500;
 	font-size: 20px;
-	padding: 1rem;
+	padding: 1rem 1rem 5rem 1rem;
 	max-width: 960px;
 	margin: auto;
 }
@@ -12,13 +12,34 @@
 	font-size: 5rem;
 	font-weight: 700;
 }
-
 .App h2 {
+	font-family: 'Roboto', sans-serif;
+}
+
+.App button {
+	outline: none;
+	padding: 0.7rem 1rem;
+	border: none;
+	color: #383e42;
+	background-color: rgb(226, 221, 221);
+	border-radius: 5px;
+	transition: all 0.3s ease-in-out;
+}
+.App button:hover {
+	background: #383e42;
+	color: white;
 }
 
 .App p {
 	font-size: 1rem;
 	letter-spacing: 1px;
 	line-height: 1.5rem;
-	font-family: 'Abel', sans-serif;
+	font-family: 'Roboto', sans-serif;
+}
+
+@media (max-width: 767px) {
+	.App h1 {
+		font-size: 3rem;
+		font-weight: 700;
+	}
 }
