--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,9 +1,7 @@
 .Footer {
-	position: fixed;
+	position: relative;
 	height: 60px;
-	bottom: 0;
-	left: 0;
-	right: 0;
+
 	width: 100%;
 	display: flex;
 	flex-direction: column;
